fix popular menu toggle link color on mobile

--- a/src/main/css/popular.css
+++ b/src/main/css/popular.css
@@ -58,6 +58,10 @@
 		top: -1px;
 		right: -1px;
 	}
+    .frontpage a.menu-toggle .fa {
+        color: white;
+    }
+}
 	
 
 }	 
